# knife4p

./: .gitignore  README.md  pyproject.toml
examples/: __init__.py  django_ninja_app.py  django_ninja_urls.py  fastapi_app.py  starlette_app.py
src/knife4p/: __init__.py  app.py  config.py  django.py
src/knife4p/assets/: NOTICE  doc.html
src/knife4p/assets/webjars/knife4j-ui-react/: index.html  oauth2-redirect.html
src/knife4p/assets/webjars/knife4j-ui-react/assets/: index.css  index.js
tests/: test_asgi_app.py  test_config.py  test_django_adapter.py  test_django_ninja_example.py  test_markdown_asset.py
