[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knife4p"
version = "0.1.0"
description = "Framework-agnostic Knife4j OpenAPI UI adapter for Python ASGI and Django apps."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Knife4p contributors" }]
dependencies = [
  "httpx>=0.27",
  "starlette>=0.36",
]

[project.optional-dependencies]
test = [
  "anyio>=4",
  "django>=4.2",
  "django-ninja>=1.1",
  "fastapi>=0.110",
  "pytest>=8",
  "pytest-django>=4.8",
  "pytest-httpx>=0.30",
  "uvicorn>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/knife4p"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.tmp",
  "/.venv",
  "/.pytest_cache",
  "/dist",
  "**/__pycache__",
  "*.pyc",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
